--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jsonp": "^0.2.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
+    "video.js": "^7.5.4",
+    "videojs-contrib-hls": "^5.15.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2",
