--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@videojs/http-streaming": "^1.10.1",
     "ajv": "^6.10.0",
     "axios": "^0.18.0",
     "element-ui": "^2.8.2",
@@ -20,6 +21,7 @@
     "sass-loader": "^7.1.0",
     "video.js": "^7.5.4",
     "videojs-contrib-hls": "^5.15.0",
+    "videojs-flash": "^2.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2",
@@ -57,7 +59,7 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "uglifyjs-webpack-plugin": "^1.1.1",
+    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "url-loader": "^1.1.2",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
