--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ajv": "^6.10.0",
     "axios": "^0.18.0",
     "element-ui": "^2.8.2",
+    "file-saver": "^2.0.1",
     "jsonp": "^0.2.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
@@ -25,7 +26,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "xlsx": "^0.14.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
