--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@videojs/http-streaming": "^1.10.1",
     "ajv": "^6.10.0",
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "element-ui": "^2.8.2",
     "file-saver": "^2.0.1",
     "jsonp": "^0.2.1",
@@ -40,6 +41,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
